Fix spacing between sections

--- a/assets/theme.css
+++ b/assets/theme.css
@@ -3314,6 +3314,10 @@ a .link-hover:hover {
 .header--full + .shopify-section {
   margin-top: 10px;
 }
+.shopify-section {
+  margin-top: 40px;
+  margin-bottom: 40px;
+}
 .carousel {
   overflow: hidden;
 }
